fix: update CORS configuration to use allowed origin patterns and enhance header handling